--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for String-Normal
 
 0.05
+    - added --config option to normalizer tool
+    - corrected normalizer tool --version arg
+    - corrected license type in Makefile
 
 0.04
     - removed start (^) and end ($) from title and address stop word removal
